--- a/views/results.slim
+++ b/views/results.slim
@@ -1,7 +1,7 @@
 == slim :_search
 
 div
-  form [action='export' method='POST']
+  form [action='#{mount_point}/export' method='POST']
     div.form-group
       - if @results.any?
         input#select-all [type='checkbox']
@@ -21,4 +21,4 @@ div
           span.course-info
             = result['code']
             br
-            a [href='view/#{ result["id"] }' target='_blank'] View Syllabus
+            a [href='#{mount_point}/view/#{ result["id"] }' target='_blank'] View Syllabus
