--- a/views/_search.slim
+++ b/views/_search.slim
@@ -32,4 +32,4 @@ div.row
       | Unable to retreive email address for sending report. Try updating your contact email 
       a [href='https://ucdenver.instructure.com/profile/settings'] here
       | , then logging in again
-    a.float-right [href='/auth/logout'] Log Out
+    a.float-right [href="#{mount_point}/logout"] Log Out
