--- a/public/main.css
+++ b/public/main.css
@@ -1,25 +1,10 @@
-#header {
-  padding: 0px 10px;
-}
-
 #result-count {
   margin-top: 10px;
 }
 
 .btn-cu {
-  background-color: #ceb87c;
-  border-color: black;
-  display:inline;
+  display:inline !important;
   margin: 5px;
-}
-
-.btn-cu:hover {
-  background-color: #b8a162;
-  border-color: black;
-}
-
-.float-right {
-  float: right;
 }
 
 .form-group {
@@ -44,30 +29,4 @@ label {
 
 table {
   margin-top: 10px;
-  width: 100%;
-}
-
-tr {
-  width: 100%;
-}
-
-tr:nth-child(even) {
-  background-color: #f5f5f5;
-}
-
-tr:nth-child(odd) {
-  background-color: #ffffff;
-}
-
-td {
-  border-bottom: 1px solid #d6d6d6;
-  border-top: 1px solid #d6d6d6;
-  padding: 5px;
-}
-
-th {
-  border-bottom: 1px solid #b3b3b3;
-  font-family: "OpenSansBold", Helvetica, Arial, sans-serif;
-  font-weight: 900;
-  padding-bottom: 3.5px;
 }
