--- a/views/_search.slim
+++ b/views/_search.slim
@@ -1,17 +1,5 @@
-div#header
-  h2 Syllabus Exporter
-  a [href='#{settings.canvas_url}' target='_blank'] #{settings.canvas_url}
-  p
-    - if session['user_email']
-      | Report will be sent to #{session['user_email']}
-    - else
-      | Unable to retreive email address for sending report. Try updating your contact email
-      a [href='https://ucdenver.instructure.com/profile/settings'] here
-      | , then logging in again
-
-    a.float-right [href="#{mount_point}/canvas-auth-logout"] Log Out
-
-hr
+link [rel='stylesheet' href='#{mount_point}/assets/wolf_core.css']
+== slim :_header, :locals => {:email_info => true}
 
 div.row
   form.form-inline [action="#{mount_point}" method='POST']
