--- a/public/main.css
+++ b/public/main.css
@@ -1,3 +1,8 @@
+#loading {
+  display: inline;
+  margin: 5px;
+}
+
 #result-count {
   margin-top: 10px;
 }
@@ -7,8 +12,31 @@
   margin: 5px;
 }
 
+.even {
+  background-color: #f5f5f5 !important
+}
+
 .form-group {
   margin: 0 1%;
+}
+
+.glyphicon-refresh {
+  animation: spin 1s infinite linear;
+  -webkit-animation: spin2 1s infinite linear;
+}
+
+@keyframes spin {
+  from { transform: scale(1) rotate(0deg); }
+  to { transform: scale(1) rotate(360deg); }
+}
+
+@-webkit-keyframes spin2 {
+  from { -webkit-transform: rotate(0deg); }
+  to { -webkit-transform: rotate(360deg); }
+}
+
+.odd {
+  background-color: #ffffff !important
 }
 
 h2 {
